# q-cli

./: .crux_template.md  .dockerignore  .gitignore  .gitmodules  .graphqlrc  .lintstagedrc.mjs  .rustfmt.toml  .swiftlint.yml  .yarnrc.yml  Cargo.toml  Config  Cross.toml  Makefile  Makefile.shared  README.md  bundle.bat  callback.c  changelog.json  codecov.yml  deny.toml  dev.sh  feed.json  fig.wxi  fig.wxs  figterm.c  get_shell.c  history.c  loop.c  main.c  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  post.sh  pre.sh  release.yaml  rust-toolchain.toml  screen.c  setup.sh  term_state.c  (+3 more)
cw_cli/: Cargo.toml  Makefile  README.md
cw_cli/src/: main.rs
cw_cli/src/cli/: ai.rs  autocomplete.rs  chat.rs  debug.rs  diagnostics.rs  doctor.rs  hook.rs  init.rs  installation.rs  integrations.rs  issue.rs  mod.rs  settings.rs  telemetry.rs  theme.rs  tips.rs  tweet.rs  uninstall.rs  update.rs  user.rs
cw_cli/src/util/: mod.rs  spinner.rs
cw_cli/tests/: cli.rs  init.rs
cw_cli/tests/snapshots/: init__init_snapshot_bash_post_bash_profile.snap  init__init_snapshot_bash_post_bashrc.snap  init__init_snapshot_bash_pre_bash_profile.snap  init__init_snapshot_bash_pre_bashrc.snap  init__init_snapshot_fish_post_99_fig_post.snap  init__init_snapshot_fish_pre_00_fig_pre.snap  init__init_snapshot_zsh_post_zprofile.snap  init__init_snapshot_zsh_post_zshrc.snap  init__init_snapshot_zsh_pre_zprofile.snap  init__init_snapshot_zsh_pre_zshrc.snap
dotfilesd/: Cargo.toml  Makefile  build.rs  install_script.sh  readability.js  todo
dotfilesd/src/: cli.rs  config.rs  daemon.rs  main.rs
dotfilesd/src/auth/: mod.rs
dotfilesd/src/cli/: app.rs  auth.rs  debug.rs  diagnostics.rs  doctor.rs  hook.rs  init.rs  installation.rs  internal.rs  invite.rs  issue.rs  mod.rs  plugins.rs  settings.rs  sync.rs  theme.rs  tips.rs  tweet.rs  util.rs
dotfilesd/src/config/: mod.rs
dotfilesd/src/daemon/: launchd_plist.rs  mod.rs  settings_watcher.rs  systemd_unit.rs  websocket.rs
dotfilesd/src/daemon_files/: com.dotfiles.Daemon.plist  dotfiles-Daemon.service  dotfiles-daemon.service  io.fig.dotfiles-daemon.plist
dotfilesd/src/ipc/: command.rs  hook.rs  mod.rs
dotfilesd/src/plugins/: api.rs  download.rs  init.rs  lock.rs  manifest.rs  mod.rs
dotfilesd/src/proto/: local.rs  mod.rs
dotfilesd/src/util/: auth.rs  checksum.rs  mod.rs  settings.rs  shell.rs  sync.rs  terminal.rs
fig-ibus-engine/: Cargo.toml  engine.xml
fig-ibus-engine/src/: main.rs
fig-tauri/src-tauri/: Cargo.toml  tauri.conf.json
fig-tauri/src-tauri/src/: api.rs  main.rs  os.rs  os_.rs  prelude.rs  state.rs
fig_cli/: Cargo.toml  Makefile  README.md  fig_cli.wxs  install_script.sh  readability.js
fig_cli/src/: cli.rs  main.rs
fig_cli/src/cli/: ai.rs  auth.rs  autocomplete.rs  cloud_run.rs  commandline_tool.rs  completion.rs  debug.rs  diagnostics.rs  doctor.rs  export.rs  hook.rs  init.rs  installation.rs  integrations.rs  invite.rs  issue.rs  man.rs  mod.rs  plugins.rs  pro.rs  run.rs  scripts.rs  settings.rs  snippet.rs  source.rs  ssh.rs  team.rs  telemetry.rs  theme.rs  tips.rs  tweet.rs  uninstall.rs  update.rs  user.rs  util.rs  workflow.rs  wrapped.rs
fig_cli/src/daemon/: launchd_plist.rs  macos.rs  mod.rs  scheduler.rs  settings_watcher.rs  socket_server.rs  system_handler.rs  systemd_unit.rs  websocket.rs
fig_cli/src/dotfiles/: api.rs  mod.rs  notify.rs
fig_cli/src/integrations/: mod.rs  ssh.rs
fig_cli/src/plugins/: api.rs  (+2 more)
fig_cli/tests/: cli.rs  init.rs
fig_cli/wix/: main.wxs
fig_desktop/: Cargo.toml  Makefile  README.md  build.rs  entitlements.plist  fig_desktop.wxs  tauri.conf.json  updating.html
fig_desktop/fuzz/: Cargo.toml
fig_desktop/html/: offline.html  updating.html
fig_desktop/icons/: icon.icns
fig_desktop/src/: auth_watcher.rs  cli.rs  event.rs  figterm.rs  file_watcher.rs  icons.rs  install.rs  main.rs  notification.rs  notification_bus.rs  settings.rs  tray.rs  update.rs  utils.rs  window.rs
fig_desktop/wix/: main.wxs
fig_ibus_engine/: Cargo.toml  Makefile  README.md  build.rs  engine.xml
fig_ibus_engine/src/: engine.vala  main.rs
fig_input_method/: Cargo.toml  Info.plist  Info_test.plist  Makefile  build.rs
fig_input_method/src/: imk.rs  main.rs
fig_tauri/src-tauri/: Cargo.toml  Makefile  build.rs  tauri.conf.json
figcli/: .gitignore  Cargo.toml  Makefile  ScriptCommands.swift  Settings.swift  SocketServer.swift  String+Shell.swift  WebSocket.swift  go.mod  go.sum  install_script.sh  main.swift  spec.ts
figcli/callback/: main.go
figcli/diagnostics/: diagnostics_test.go
figcli/fig-ipc/: command.go  hook.go  integration_test.go  ipc.go
figcli/logging/: logging.go  logging_test.go
figcli/settings/: settings.go
figcli/specs/: specs.go
figcli/src/: main.rs
figcli/teams/: teams.go
figterm/: .gitignore  .gitmodules  Cargo.toml  Makefile  Makefile.shared  README.md  build.rs  build.sh  callback.c  color.c  dev.sh  figterm.c  figterm.wxs  history.c  insertion.md  main.c  realpath.sh  screen.c  util.c
figterm/alacritty_terminal/: Cargo.toml
figterm/figterm/: Cargo.toml  README.md  build.rs  figterm.proto
figterm/include/: fig.h
figterm/lib/: Makefile  base64.c  exit.c  proc.c  pty.c  string.c  tty.c
figterm/src/: cleanup.rs  cli.rs  codex.rs  command_info.rs  event_handler.rs  fig.rs  fig_info.rs  figterm.rs  ghost_text.rs  history.rs  inline_shell_completion.rs  interceptor.rs  ipc.rs  local.rs  logger.rs  main.rs  message.rs  new_history.rs  pty.rs  screen.rs  term.rs  update.rs  utils.rs
lib/alacritty_terminal/: Cargo.toml
lib/auth/: Cargo.toml  README.md
lib/aws-toolkit-telemetry-definitions/: Cargo.toml  build.rs  def.json
lib/dbus/: Cargo.toml
lib/fig_api_client/: Cargo.toml
lib/fig_autocomplete/: Cargo.toml
lib/fig_color/: Cargo.toml
lib/fig_daemon/: Cargo.toml
lib/fig_desktop_api/: Cargo.toml
lib/fig_diagnostic/: Cargo.toml
lib/fig_graphql/: Cargo.toml  build.rs
lib/fig_history/: Cargo.toml
lib/fig_install/: Cargo.toml  index.json
lib/fig_integrations/: Cargo.toml  build.rs
lib/fig_ipc/: Cargo.toml
(+3006 files in other folders)
