[workspace]
resolver = "2"
members = [
    "cw_cli",
    "fig_desktop",
    "fig_input_method",
    "figterm",
    "lib/*",
    "lib/macos_utils/accessibility-master/accessibility",
    "lib/macos_utils/accessibility-master/accessibility-sys",
    "lib/macos_utils/appkit-nsworkspace-bindings",
    "tests/fig-api/fig-api-mock",
    "tests/stress/stress_client",
    "tests/stress/stress_server",
]

[workspace.package]
authors = ["Amazon CodeWhisperer Devs"]
edition = "2021"
homepage = "https://aws.amazon.com/codewhisperer"
publish = false
version = "0.4.0"

[workspace.metadata]
channel = "none"

[profile.release]
debug = 1
incremental = true
lto = "off"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3

[patch.crates-io]
# Commenting these out for now since we are not doing Windows right now and they are just not up to date
# tokio = { git = "https://github.com/sullivan-sean/tokio" }
# mio = { git = "https://github.com/sullivan-sean/mio" }
console = { git = "https://github.com/withfig/console" }
