[package]
name = "cw_cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = []
gamma = ["fig_install/gamma"]

[dependencies]
amzn-codewhisperer-client = { path = "../lib/amzn-codewhisperer-client" }
amzn-codewhisperer-streaming-client = { path = "../lib/amzn-codewhisperer-streaming-client" }
arboard = { version = "3.1.1", default-features = false, features = [
    "wayland-data-control",
] }
async-trait = "0.1.73"
auth = { path = "../lib/auth" }
bitflags = "2.4.0"
bstr = "1.1.0"
bytes = "1.4.0"
camino = "1.1.3"
cfg-if = "1.0.0"
clap = { version = "4.4.0", features = [
    "derive",
    "wrap_help",
    "deprecated",
    "string",
    "unicode",
] }
clap_complete = "4.4.0"
clap_complete_fig = "4.4.0"
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
ctrlc = "3.2.5"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
eyre = "0.6.8"
fig_api_client = { path = "../lib/fig_api_client" }
fig_autocomplete = { path = "../lib/fig_autocomplete" }
fig_diagnostic = { path = "../lib/fig_diagnostic" }
fig_install = { path = "../lib/fig_install" }
fig_integrations = { path = "../lib/fig_integrations" }
fig_ipc = { path = "../lib/fig_ipc" }
fig_log = { path = "../lib/fig_log" }
fig_proto = { path = "../lib/fig_proto" }
fig_request = { path = "../lib/fig_request" }
fig_settings = { path = "../lib/fig_settings" }
fig_telemetry = { path = "../lib/fig_telemetry" }
fig_util = { path = "../lib/fig_util" }
flume = "0.11.0"
futures = "0.3.26"
globset = "0.4.10"
indicatif = "0.17.3"
once_cell = "1.18"
owo-colors = "4.0.0"
parking_lot = "0.12.1"
rand = "0.8.5"
ratatui = { version = "0.26.1", features = ["unstable-rendered-line-info"] }
regex = "1.6.0"
semver = "1.0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spinners = "4.1.0"
supports-color = "3.0.0"
sysinfo = "0.30.5"
tempfile = "3.4.0"
textwrap = "0.16.0"
thiserror = "1.0"
time = { version = "0.3", features = [
    "serde-human-readable",
    "local-offset",
    "formatting",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = [
    "fmt",
    "time",
    "parking_lot",
] }
url = "2.3.1"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
which = "6.0.0"
winnow = "0.6.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", features = ["user"] }

[target.'cfg(target_os = "macos")'.dependencies]
macos-utils = { path = "../lib/macos-utils" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = ["Win32_System_Threading"] }
winapi = { version = "0.3", features = ["consoleapi"] }

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.5.1"
insta = "1.24.1"
paste = "1.0.11"
predicates = "3.0"
