[package]
name = "dotfilesd"
version = "0.1.0"
description = "A manager and daemon for dotfiles"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
async-trait = "0.1.52"
base64 = "0.13.0"
bitflags = "1.3.2"
bytes = "1.1.0"
clap = { version = "3.0.12", features = ["derive"] }
clap_complete = "3.0.6"
clap_complete_fig = "3.0.2"
copypasta = "0.7.1"
crossterm = "0.23.0"
ctrlc = "3.2.1"
dialoguer = "0.10.0"
directories = "4.0.1"
flume = "0.10.11"
futures = "0.3.21"
git2 = { version = "0.13.25", features = ["vendored-openssl", "vendored-libgit2"] }
globset = "0.4.8"
handlebars = "4.2.1"
notify = "4.0.17"
once_cell = "1.9.0"
prost = "0.9.0"
rand = "0.8.4"
regex = "1.5.4"
reqwest = "0.11.9"
self_update = "0.28.0"
semver = "1.0.5"
sentry = { version = "0.24.2", features = ["anyhow"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_with = "1.12.0"
sha2 = "0.10.1"
tempfile = "3.3.0"
time = { version = "0.3.6", features = ["serde-human-readable", "local-offset"] }
tokio = { version = "1.16.1", features = ["full"] }
tokio-tungstenite = { version = "0.16.1", features = ["rustls-tls-native-roots"] }
toml = "0.5.8"
url = { version = "2.2.2", features = ["serde"] }
validator = "0.14.0"

# Used for auth 
# Should break out into separate crate
aws-sdk-cognitoidentityprovider = "0.6.0"
uuid = { version = "0.8.2", features = ["v4"] }
thiserror = "1.0.30"
serde_json = "1.0.78"

[build-dependencies]
prost-build = "0.9.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.32.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
nix = "0.23.1"

# [profile.release-lto]
# inherits = "release"
# lto = true
# codegen-units = 1
