[package]
name = "fig-ibus-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ibus = { path = "../rust-lib/ibus" }
fig-ipc = { path = "../rust-lib/fig-ipc" }
fig-proto = { path = "../rust-lib/fig-proto" }
parking_lot = "0.12.0"
gtk-macros = "0.3.0"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"