[package]
name = "fig_cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = []
deno = ["dep:deno_core", "dep:deno_runtime"]

[dependencies]
arboard = { version = "3.1.0", default-features = false, features = ["wayland-data-control"] }
async-trait = "0.1.57"
atty = "0.2.14"
bitflags = "1.3.2"
bytes = "1.2.1"
camino = "1.1.1"
cfg-if = "1.0.0"
clap = { version = "4.0.11", features = ["derive", "wrap_help", "deprecated"] }
clap_complete = "4.0.2"
clap_complete_fig = "4.0.0"
color-eyre = "0.6.2"
crossterm = "0.25.0"
ctrlc = "3.2.3"
deno_core = { version = "0.153.0", optional = true }
deno_runtime = { version = "0.79.0", optional = true }
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
eyre = "0.6.8"
fig_api_client = { path = "../rust-lib/fig_api_client" }
fig_daemon = { path = "../rust-lib/fig_daemon" }
fig_install = { path = "../rust-lib/fig_install" }
fig_integrations = { path = "../rust-lib/fig_integrations" }
fig_ipc = { path = "../rust-lib/fig_ipc" }
fig_log = { path = "../rust-lib/fig_log" }
fig_proto = { path = "../rust-lib/fig_proto" }
fig_request = { path = "../rust-lib/fig_request" }
fig_settings = { path = "../rust-lib/fig_settings" }
fig_sync = { path = "../rust-lib/fig_sync" }
fig_telemetry = { path = "../rust-lib/fig_telemetry" }
fig_util = { path = "../rust-lib/fig_util" }
flume = "0.10.14"
futures = "0.3.23"
globset = "0.4.9"
humantime = "2.1.0"
once_cell = "1.15.0"
owo-colors = "3.5.0"
parking_lot = "0.12.1"
rand = "0.8.5"
regex = "1.6.0"
self_update = { version = "0.32.0", default-features = false, features = [
    "rustls",
] }
semver = "1.0.14"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.86"
shlex = "1.1.0"
spinners = "4.1.0"
sysinfo = "0.26.3"
tempfile = "3.3.0"
thiserror = "1.0.36"
time = { version = "=0.3.14", features = [
    "serde-human-readable",
    "local-offset",
    "formatting",
    "macros",
    "serde-well-known",
] }
tokio = { version = "1.20.1", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = [
    "rustls-tls-webpki-roots",
] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = [
    "fmt",
    "time",
    "parking_lot",
] }
tui = { path = "../rust-lib/tui" }
url = "2.3.1"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
validator = "0.16.0"
which = "4.3.0"
yaque = "0.6.4"

[target.'cfg(unix)'.dependencies]
nix = "0.25.0"
skim = { git = "https://github.com/grant0417/skim" }

[target.'cfg(target_os = "macos")'.dependencies]
notify = "5.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.42.0", features = ["Win32_System_Threading"] }
winapi = { version = "0.3", features = ["consoleapi"] }

[dev-dependencies]
assert_cmd = "2.0"
insta = "1.21.0"
paste = "1.0.9"
predicates = "2.1"
