[package]
name = "fig_cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = []

[dependencies]
arboard = { version = "3.1.1", default-features = false, features = [
    "wayland-data-control",
] }
async-trait = "0.1.60"
atty = "0.2.14"
bitflags = "1.3.2"
bstr = "1.1.0"
bytes = "1.3.0"
camino = "1.1.1"
cfg-if = "1.0.0"
clap = { version = "4.0.32", features = [
    "derive",
    "wrap_help",
    "deprecated",
    "string",
    "unicode",
] }
clap_complete = "4.0.6"
clap_complete_fig = "4.0.2"
color-eyre = "0.6.2"
crossterm = "0.25.0"
ctrlc = "3.2.4"
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
eyre = "0.6.8"
fig_api_client = { path = "../lib/fig_api_client" }
fig_daemon = { path = "../lib/fig_daemon" }
fig_diagnostic = { path = "../lib/fig_diagnostic" }
fig_graphql = { path = "../lib/fig_graphql", features = ["dispatch"] }
fig_history = { path = "../lib/fig_history" }
fig_install = { path = "../lib/fig_install" }
fig_integrations = { path = "../lib/fig_integrations" }
fig_ipc = { path = "../lib/fig_ipc" }
fig_log = { path = "../lib/fig_log" }
fig_proto = { path = "../lib/fig_proto" }
fig_request = { path = "../lib/fig_request" }
fig_settings = { path = "../lib/fig_settings" }
fig_sync = { path = "../lib/fig_sync" }
fig_telemetry = { path = "../lib/fig_telemetry" }
fig_util = { path = "../lib/fig_util" }
flume = "0.10.14"
futures = "0.3.25"
globset = "0.4.9"
humantime = "2.1.0"
indicatif = "0.17.2"
once_cell = "1.16.0"
owo-colors = "3.5.0"
parking_lot = "0.12.1"
rand = "0.8.5"
regex = "1.6.0"
self_update = { version = "0.32.0", default-features = false, features = [
    "rustls",
] }
semver = "1.0.16"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
shlex = "1.1.0"
spinners = "4.1.0"
sysinfo = "0.27.1"
tempfile = "3.3.0"
thiserror = "1.0.38"
time = { version = "0.3.17", features = [
    "serde-human-readable",
    "local-offset",
    "formatting",
    "macros",
] }
tokio = { version = "1.20.1", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = [
    "rustls-tls-webpki-roots",
] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.16", features = [
    "fmt",
    "time",
    "parking_lot",
] }
tui = { path = "../lib/tui" }
url = "2.3.1"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
validator = "0.16.0"
which = "4.3.0"
yaque = "0.6.4"

[target.'cfg(unix)'.dependencies]
nix = "0.26.1"
skim = { version = "0.10.2", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
macos_utils = { path = "../lib/macos_utils" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.43.0", features = ["Win32_System_Threading"] }
winapi = { version = "0.3", features = ["consoleapi"] }

[dev-dependencies]
assert_cmd = "2.0"
insta = "1.23.0"
paste = "1.0.11"
predicates = "2.1"
