[package]
name = "fig_cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = []

[dependencies]
arboard = { version = "3.1.1", default-features = false, features = [
    "wayland-data-control",
] }
async-trait = "0.1.73"
bitflags = "2.4.0"
bstr = "1.1.0"
bytes = "1.4.0"
camino = "1.1.3"
cfg-if = "1.0.0"
clap = { version = "4.4.0", features = [
    "derive",
    "wrap_help",
    "deprecated",
    "string",
    "unicode",
] }
clap_complete = "4.4.0"
clap_complete_fig = "4.4.0"
color-eyre = "0.6.2"
crossterm = "0.27.0"
ctrlc = "3.2.5"
dialoguer = { version = "0.10.3", features = ["fuzzy-select"] }
eyre = "0.6.8"
fig_api_client = { path = "../lib/fig_api_client" }
fig_autocomplete = { path = "../lib/fig_autocomplete" }
fig_diagnostic = { path = "../lib/fig_diagnostic" }
fig_install = { path = "../lib/fig_install" }
fig_integrations = { path = "../lib/fig_integrations" }
fig_ipc = { path = "../lib/fig_ipc" }
fig_log = { path = "../lib/fig_log" }
fig_proto = { path = "../lib/fig_proto" }
fig_request = { path = "../lib/fig_request" }
fig_settings = { path = "../lib/fig_settings" }
fig_sync = { path = "../lib/fig_sync" }
fig_telemetry = { path = "../lib/fig_telemetry" }
fig_util = { path = "../lib/fig_util" }
flume = "0.11.0"
futures = "0.3.26"
globset = "0.4.10"
http = "0.2.9"
humantime = "2.1.0"
indicatif = "0.17.3"
once_cell = "1.18"
owo-colors = "3.5.0"
parking_lot = "0.12.1"
rand = "0.8.5"
regex = "1.6.0"
rustls = "0.21.1"
self_update = { version = "0.38.0", default-features = false, features = [
    "rustls",
] }
semver = "1.0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.1.0"
spinners = "4.1.0"
supports-color = "2.0.0"
sysinfo = "0.29.8"
tempfile = "3.4.0"
thiserror = "1.0"
time = { version = "0.3", features = [
    "serde-human-readable",
    "local-offset",
    "formatting",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-tungstenite = { version = "0.20.0", features = [
    "rustls-tls-webpki-roots",
] }
tonic = "0.9.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = [
    "fmt",
    "time",
    "parking_lot",
] }
tui = { path = "../lib/tui" }
tungstenite = "0.20.0"
url = "2.3.1"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
validator = "0.16.0"
which = "4.4.0"
yaque = "0.6.4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", features = ["user"] }
skim = { version = "0.10.4", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
macos_utils = { path = "../lib/macos_utils" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.51.1", features = ["Win32_System_Threading"] }
winapi = { version = "0.3", features = ["consoleapi"] }

[dev-dependencies]
assert_cmd = "2.0"
insta = "1.24.1"
paste = "1.0.11"
predicates = "3.0"
