[package]
name = "fig_desktop"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[package.metadata.bundle]
name = "Fig"
icon = [
    "./icons/128x128.png",
    "./icons/16x16.png",
    "./icons/22x22.png",
    "./icons/24x24.png",
    "./icons/256x256.png",
    "./icons/32x32.png",
    "./icons/48x48.png",
    "./icons/512x512.png",
    "./icons/64x64.png",
]
identifier = "com.mschrage.fig"
resource = "./autocomplete-icons/*"

[features]
default = []
console = ["tokio/tracing", "fig_log/console"]
# Required for cargo-tauri CLI
custom-protocol = []

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.57"
base64 = "0.13.1"
bytes = "1.3.0"
camino = { version = "1.0.9", features = ["serde1"] }
cfg-if = "1.0.0"
clap = { version = "4.0.27", features = ["deprecated"] }
dashmap = "5.3.4"
fig_api_client = { path = "../lib/fig_api_client" }
fig_daemon = { path = "../lib/fig_daemon" }
fig_desktop_api = { path = "../lib/fig_desktop_api" }
fig_install = { path = "../lib/fig_install" }
fig_integrations = { path = "../lib/fig_integrations", features = ["dispatch"] }
fig_ipc = { path = "../lib/fig_ipc" }
fig_log = { path = "../lib/fig_log", features = ["sentry"] }
fig_proto = { path = "../lib/fig_proto" }
fig_request = { path = "../lib/fig_request" }
fig_settings = { path = "../lib/fig_settings" }
fig_sync = { path = "../lib/fig_sync" }
fig_telemetry = { path = "../lib/fig_telemetry" }
fig_util = { path = "../lib/fig_util" }
flume = "0.10.14"
fnv = "1.0.7"
hashbrown = "0.13.1"
http = "0.2.8"
image = "0.24.5"
imageproc = "0.23.0"
moka = "0.9.6"
notify = "5.0.0"
once_cell = "1.16.0"
parking_lot = { version = "0.12.1", features = ["serde"] }
paste = "1.0.9"
percent-encoding = "2.2.0"
rand = "0.8.5"
regex = "1.6.0"
rfd = "0.10.0"
semver = "1.0.14"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
shellexpand = "3.0.0"
sysinfo = "0.26.8"
tempfile = "3.3.0"
time = "0.3.17"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.36"
url = "2.3.1"
which = "4.3.0"
whoami = "1.2.1"
wry = { version = "0.22.0", default-features = false, features = [
    "tray",
    "protocol",
    "devtools",
    "transparent",
] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.43.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
]

[target.'cfg(unix)'.dependencies]
nix = "0.26.1"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { path = "../lib/dbus" }
freedesktop-icons = "0.2.1"
gtk = { version = "0.15", features = ["v3_22"] }
x11rb = "0.11.0"
zbus = "3.6.1"

[target.'cfg(target_os="macos")'.dependencies]
accessibility-sys = { path = "../lib/macos_utils/accessibility-master/accessibility-sys", version = "0.1.3" }
cocoa = "0.24.0"
core-foundation = "0.9"
core-graphics = "0.22.3"
libc = "0.2"
macos_utils = { path = "../lib/macos_utils" }
objc = "0.2.7"
system-configuration = "0.5.0"

[build-dependencies]
image = "0.24.5"
