[package]
name = "fig_desktop"
authors = ["Amazon CodeWhisperer Devs"]
edition.workspace = true
homepage = "https://aws.amazon.com/codewhisperer"
publish.workspace = true
version = "2.18.0-dev"

[package.metadata.bundle]
name = "Fig"
icon = [
    "./icons/128x128.png",
    "./icons/16x16.png",
    "./icons/22x22.png",
    "./icons/24x24.png",
    "./icons/256x256.png",
    "./icons/32x32.png",
    "./icons/48x48.png",
    "./icons/512x512.png",
    "./icons/64x64.png",
]
identifier = "com.amazon.codewhisperer"
resource = "./autocomplete-icons/*"

[features]
default = []
console = ["tokio/tracing", "fig_log/console"]
# Required for cargo-tauri CLI
custom-protocol = []

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.73"
base64 = "0.21.0"
bytes = "1.4.0"
camino = { version = "1.1.3", features = ["serde1"] }
cfg-if = "1.0.0"
clap = { version = "4.1.3", features = ["deprecated"] }
dashmap = "5.3.4"
fig_api_client = { path = "../lib/fig_api_client" }
fig_desktop_api = { path = "../lib/fig_desktop_api" }
fig_install = { path = "../lib/fig_install" }
fig_integrations = { path = "../lib/fig_integrations", features = ["dispatch"] }
fig_ipc = { path = "../lib/fig_ipc" }
fig_log = { path = "../lib/fig_log", features = ["sentry"] }
fig_proto = { path = "../lib/fig_proto" }
fig_request = { path = "../lib/fig_request" }
fig_settings = { path = "../lib/fig_settings" }
fig_sync = { path = "../lib/fig_sync" }
fig_telemetry = { path = "../lib/fig_telemetry" }
fig_util = { path = "../lib/fig_util" }
flume = "0.11.0"
fnv = "1.0.7"
http = "0.2.8"
image = "0.24.7"
imageproc = "0.23.0"
infer = "0.15.0"
mime = "0.3.17"
# jemallocator = { version = "0.5.0", features = ["profiling"] }
moka = { version = "0.12.0", features = ["sync"] }
notify = "6.0.0"
once_cell = "1.17.1"
parking_lot = { version = "0.12.1", features = ["serde"] }
paste = "1.0.11"
percent-encoding = "2.2.0"
rand = "0.8.5"
regex = "1.6.0"
rfd = "0.11.4"
semver = "1.0.16"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.104"
shellexpand = "3.0.0"
sysinfo = "0.29.8"
tempfile = "3.4.0"
time = "0.3.19"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.36"
url = "2.3.1"
uuid = { version = "1.4.1", features = ["serde"] }
which = "4.4.0"
whoami = "1.3.0"
wry = { version = "0.30.0", default-features = false, features = [
    "tray",
    "protocol",
    "devtools",
    "transparent",
    "linux-body",
] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.51.1"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", features = ["user"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { path = "../lib/dbus" }
freedesktop-icons = "0.2.2"
gtk = "0.16.1"
x11rb = "0.12.0"
zbus = "3.10.0"

[target.'cfg(target_os="macos")'.dependencies]
accessibility-sys = { path = "../lib/macos_utils/accessibility-master/accessibility-sys", version = "0.1.3" }
cocoa = "0.25.0"
core-foundation = "0.9"
core-graphics = "0.23.0"
libc = "0.2"
macos_utils = { path = "../lib/macos_utils" }
objc = "0.2.7"
system-configuration = "0.5.0"

[build-dependencies]
image = "0.24.7"
