[package]
name = "fig_ibus_engine"
version = "0.1.0"
authors = ["fig developers"]
edition = "2021"
homepage = "https://fig.io"
publish = false

[dependencies]
ibus = { path = "../rust-lib/ibus" }
fig_ipc = { path = "../rust-lib/fig_ipc" }
fig_proto = { path = "../rust-lib/fig_proto" }
parking_lot = "0.12.0"
gtk-macros = "0.3.0"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"
