[package]
name = "fig_ibus_engine"
version = "0.1.0"
authors = ["fig developers"]
edition = "2021"
homepage = "https://fig.io"
publish = false

[dependencies]
fig_ipc = { path = "../rust-lib/fig_ipc" }
fig_proto = { path = "../rust-lib/fig_proto" }
parking_lot = "0.12.0"

[build-dependencies]
cc = "1.0.73"
pkg-config = "0.3.25"
