[package]
name = "fig_ibus_engine"
version = "0.1.0"
authors = ["fig developers"]
edition = "2021"
homepage = "https://fig.io"
publish = false

[dependencies]
fig_ipc = { path = "../rust-lib/fig_ipc" }
fig_proto = { path = "../rust-lib/fig_proto" }
fig_log = { path = "../rust-lib/fig_log" }
parking_lot = "0.12.1"
tracing = "0.1.35"

[build-dependencies]
cc = "1.0.73"
pkg-config = "0.3.25"
