[package]
name = "fig_input_method"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Fig developers"]

[bundle]
bundle_name = "FigInputMethod"
bundle_identifier = "io.fig.caret"
input_source_identifier = "io.fig.caret"
visible_in_system_ui = false
input_method_type = "palette"

[build-dependencies]
plist = "1.3.1"
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.9"
apple-bundle = "*"


[dependencies]
objc = "0.2.7"
cocoa = "0.24.0"
libc = "0.2"
rand = "0.8.4"
fig_ipc = { path = "../rust-lib/fig_ipc" }
fig_log = { path = "../rust-lib/fig_log" }
fig_proto = { path = "../rust-lib/fig_proto" }
macos_accessibility_position = { path = "../rust-lib/macos_accessibility_position" }
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"