[package]
name = "fig"
version = "1.3.0"
description = "The CLI for Fig"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
async-trait = "0.1.52"
base64 = "0.13.0"
bitflags = "1.3.2"
bytes = "1.1.0"
clap = { version = "3.1.0", features = ["derive"] }
clap_complete = "3.1.0"
clap_complete_fig = "3.1.0"
copypasta = "0.7.1"
crossterm = "0.23.0"
ctrlc = "3.2.1"
dialoguer = "0.10.0"
fig-auth = { path = "../rust-lib/fig-auth" }
fig-directories = { path = "../rust-lib/fig-directories" }
fig-ipc = { path = "../rust-lib/fig-ipc" }
fig-proto = { path = "../rust-lib/fig-proto" }
fig-settings = { path = "../rust-lib/fig-settings" }
fig-telemetry = { path = "../rust-lib/fig-telemetry" }
flume = "0.10.11"
futures = "0.3.21"
git2 = { version = "0.14.1", features = ["vendored-openssl", "vendored-libgit2"] }
globset = "0.4.8"
glob = "0.3.0"
handlebars = "4.2.1"
notify = "4.0.17"
objc = "0.2.7"
once_cell = "1.9.0"
parking_lot = "0.12.0"
prost = "0.9.0"
rand = "0.8.4"
regex = "1.5.4"
reqwest = { version = "0.11.10", features = ["json", "rustls-tls-webpki-roots", "socks"] }
self_update = "0.29.0"
semver = "1.0.5"
sentry = { version = "0.25.0", features = ["anyhow"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_with = "1.12.0"
sha2 = "0.10.1"
sysinfo = "0.23.4"
tempfile = "3.3.0"
thiserror = "1.0.30"
time = { version = "0.3.7", features = ["serde-human-readable", "local-offset", "formatting", "macros", "serde-well-known"] }
tokio = { version = "1.16.1", features = ["full"] }
tokio-tungstenite = { version = "0.17.0", features = ["rustls-tls-webpki-roots"] }
toml = "0.5.8"
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["fmt", "time", "parking_lot"] }
validator = "0.14.0"
walkdir = "2.3.2"
native-dialog = "0.6.3"
spinners = "~3.0.1"


[target.'cfg(windows)'.dependencies]
windows = { version = "0.34.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
nix = "0.23.1"
